--- a/电磁学.md
+++ b/电磁学.md
@@ -1,2 +1,854 @@
 # 电磁学
 
+## 静电场
+
+### 1. 库仑定律
+
+- 绝缘体：自由电子很少，大部分电荷只能在原子或分子范围内做微小位移
+- 半导体：载流子为电子或空穴
+- 导体：有可以自由移动的自由电荷
+
+#### 库仑定律
+
+真空中两静止点电荷受力为F，方向为同号相斥、异号相吸。
+$$
+F=\frac{1}{4\pi\varepsilon_0} \frac{q_1 q_2}{r^2} \\
+$$
+
+- $\varepsilon_0=8.85\times 10^{-12} \ C^2/(N\cdot m^2)$ 
+- $k=8.99\times 10^9 \ N\cdot m^2/C^2$ 
+- $元电荷电量e=1.602\times 10^{-19} \ C$ 
+
+### 2. 电场
+
+#### 电场
+
+定义为单位电荷在电场中受到的电场力，方向为正电荷受电场力方向。
+$$
+E=\frac{F}{q_0}
+$$
+
+#### 各种电场
+
+点电荷产生的场强：
+$$
+E=\frac{1}{4\pi \varepsilon_0} \frac{q}{r^2} \ ，方向沿径向
+$$
+无限长带电细棒产生的场强：
+
+$$
+E=\frac{\eta_e}{2\pi \varepsilon_0 r}​，方向垂直于细棒
+$$
+均匀带电球壳产生的电场：
+设球壳半径为R
+$$
+\frac{1}{4\pi \varepsilon_0} \frac{Q}{r^2} \\ 当\ r<R\ 时成立，当\ r<R\ 即在球壳内电场为0
+$$
+均匀带电球体产生的场强：
+
+$$
+\frac{1}{4\pi \varepsilon_0} \frac{Q}{r^2}, \ 当 \ r>R\ 时 \\
+\frac{1}{4\pi \varepsilon_0} \frac{Qr}{R^3},\ 当\ r<R\ 时
+$$
+无限大带电平面产生的电场：
+其中 $\sigma_e$ 为平面电荷面密度
+$$
+E=\frac{\sigma_e}{2\varepsilon_0}
+$$
+平行板电容器(无限长)之间的场强：
+$$
+E=\frac{\sigma_e}{\varepsilon_0}
+$$
+电偶极子的场强:
+$$
+E_r=\frac{1}{4\pi \varepsilon_0}\frac{2p \cos\theta}{r^3},\ 径向分量 \\
+E_\theta=\frac{1}{4\pi \varepsilon_0}\frac{p \sin\theta}{r^3},\ 角度分量 \\
+$$
+
+其中，电偶极矩 $p=ql$ 
+
+### 3. 高斯定理
+
+通过任何一个闭合曲面的电通量 $\Phi_E$ 等于该面内包含的所有电荷和除以 $\varepsilon_0$ 。
+$$
+\Phi_E=\oiint \vec{E}\cdot \vec{dS}=\frac{1}{\varepsilon_0}\sum\limits_{(s内)} q_i
+$$
+应用：
+
+高斯定理可以用来求有对称性质导体产生的电场
+
+推论：
+
+- 电场线疏的地方场强小，密的地方场强大。
+- 电场线起始于正电荷或无穷远，终止于负电荷或无穷远。
+
+### 4. 电势及梯度
+
+#### 环路定理
+
+静电场中场强沿任意闭合环路的线积分为0
+$$
+\oint \vec{E}\cdot \vec{dl}=0
+$$
+这等价于电场力在电场中做功与路径无关。而这样的场被称为保守力场或势场，所以电场是保守场。
+
+#### 电势
+
+若选择无穷远为电势0点，则电势差等于把试探电荷从当前点移动到无穷远做的功除以电量。
+$$
+U(P)=
+U_{p\ \infty}=
+\frac{A_{p\ \infty}}{q_0} = 
+\int \nolimits_p^\infty \vec{E}\cdot \vec{dl}
+$$
+所以电场方向为电势降的方向。
+
+由电势求场强：
+$$
+\vec{E}=-\nabla U
+$$
+场强在任一方向的投影：
+$$
+\vec{E_l}=-\frac{\partial U}{\partial l}
+$$
+
+
+- 点电荷电势分布
+  $$
+  U=\frac{1}{4\pi \varepsilon_0} \frac{q}{r}
+  $$
+  
+- 均匀带电球壳电势分布
+  $$
+  U=\frac{1}{4\pi \varepsilon_0} \frac{Q}{r},\ r>R\ 时 \\
+  U=\frac{1}{4\pi \varepsilon_0} \frac{Q}{R}\ (常量),\ r<R\ 时
+  $$
+
+- 电偶极子电势分布
+  其中，$\vec{p}$ 为电偶极矩 $\vec{p}=q\vec{l}$ ，$\vec{r}$ 为电偶中点到任意一点的连线方向单位矢量
+  $$
+  U=\frac{1}{4\pi \varepsilon_0} \frac{\vec{p}\cdot \vec{r}}{r^2}
+  $$
+
+### 5. 静电场中的导体
+
+放在静电场中的导体会出现静电感应现象，使导体表面带电荷，达到静电平衡。
+
+**静电平衡：**
+
+导体内场强处处为0、导体电势处处相等、导体表面为等势面，靠近导体表面场强与导体表面垂直。
+
+**导体表面电荷：**
+
+静电平衡下，导体表面附近场强E与表面电荷$\sigma_e$ 有如下关系：
+$$
+E=\frac{\sigma_e}{\varepsilon_0}
+$$
+尖端放电：静电平衡下的导体尖端附近场强很大。
+
+**导体壳：**导体壳内表面处处没有电荷，电荷全部分布在外表面；空腔内没有电场。
+
+**导体壳内有带电体：**
+
+导体内壁的电量与带电体相同，符号相反。导体内仍没有电场。
+
+所以导体内外的电场不会互相影响，称这个现象为静电屏蔽。
+
+### 6. 静电能
+
+一个带电体系的静电能$W_e$ 等于把各部分电荷从无限分散状态聚集起来抵抗静电力做的功。
+
+带电体系的静电能$W_e$ 由各带电体之间的互相作用能$W_e$ 和每个带电体的自能$W_自$ 组成。而每个带电体的$W_自$ 又由所有电荷聚集起来做的功。
+$$
+W_互=\frac{1}{2}\sum^n_{i=1}q_iU_i
+$$
+
+### 7. 电容和电容器
+
+#### 孤立导体电容
+
+使导体每升高单位电势所需的电量。
+$$
+C=\frac{q}{U}
+$$
+单位为法拉F(C/V)
+
+#### 电容器电容
+
+$$
+C=\frac{q_A}{U_{AB}}
+$$
+其中，$q_A$为一个极板的电荷量，$U_{AB}$为两极板电势差。
+
+平行极板电容
+$$
+C=\frac{\varepsilon_0 S}{d}
+$$
+其中，S为极板面积，d为两极板之间距离。
+
+电容器储能
+$$
+W_e=\frac{Q^2}{2C}=\frac{1}{2}CU^2=\frac{1}{2}QU
+$$
+其中，Q、U均为充能后的值。
+
+### 9. 恒定电流场
+
+#### 电流
+
+单位时间内通过导体某一截面的电量（电荷通量），方向为正电荷流动的方向。
+
+在恒定闭合电路中，不管各段导线粗细或电阻怎么样，电流大小都相同。(可以由电场的高斯定理和欧姆定律微分形式证明)
+
+#### 电流密度
+
+表示电流的强度和方向。电流密度方向和电流/场强方向一致。
+$$
+dI=\vec{j}\cdot \vec{dS} \\
+I=\iint \vec{j}\cdot \vec{dS}
+$$
+
+#### 欧姆定律微分形式
+
+$$
+\vec{j}=\sigma \vec{E}
+$$
+
+其中，$\sigma$为材料的电导率。
+
+#### 电流连续方程
+
+取一闭合面S，单位时间内S面内流出的电量等于电荷的减少量
+$$
+\oiint\limits_{(S)}\vec{j}\cdot\vec{dS}=-\frac{dq}{dt}
+$$
+对于恒定电流，任意时间任意闭合面S内流出的电荷量为0，即电流处处恒定。下式称为电流的恒定条件。
+$$
+\oiint\limits_{(S)}\vec{j}\cdot\vec{dS}=0
+$$
+
+#### 导体界面上的边界条件
+
+电流在不同材料**导体**之间的界面会折射。导体两侧电流线与法线夹角的正切之比等于两侧导体的电导率只比。即材料的电导率越大（导电性越强），电流与界面法向夹角越大。
+$$
+\frac{tan\theta_1}{tan\theta_2}=\frac{\sigma_1}{\sigma_2}
+$$
+边界条件：
+
+1. 界面两侧电流密度的法向分量相同（大小和方向）
+2. 界面两侧场强的切向分量相同（大小和方向）
+
+#### 电动势
+
+非静电力（对单位正电荷）所做的功。
+
+闭合回路的电动势
+$$
+\varepsilon=\oint \vec{K}\cdot \vec{dl}
+$$
+其中，$\vec{K}$为非静电力
+
+电源电动势
+
+把单位正电荷从负极通过电源内部移动到正极，非静电力所做功。
+$$
+\varepsilon=\int^+_- \vec{K}\cdot \vec{dl}
+$$
+
+电源电动势和电源电压
+
+电动势和电源电压符号相反 $\varepsilon=-U$
+电源内部电场力做负功，电势增加；外电路电场力做正功，电势减小。
+$$
+\int^+_-\vec{E}\cdot \vec{dl}=-\int^+_-\vec{K}\cdot \vec{dl} \quad (电源内部)
+$$
+
+
+---
+
+## 恒磁场
+
+### 1. 磁的基本规律
+
+安培定理
+
+两个电流元之间会有安培力，电流元1对电流元2的安培力：
+$$
+dF_{12}=\frac{\mu_0}{4\pi}\frac{I_1I_2 \ \vec{dl_2}\times(\vec{dl_1} \times \hat{r_{12}})}{r_{12}^2}
+$$
+其中，$\vec{dl}$ 方向为电流方向。
+
+$\mu_0$ 为真空磁导率 / 磁场常数，$\mu_0=4\pi\times10^{-7}\ (A\cdot m)$
+
+### 2. 毕奥-萨伐定律
+
+#### 磁场
+
+定义电流元在 $r$ 处产生的磁场
+$$
+\vec{dB}=\frac{\mu_0}{4\pi}\frac{I\ \vec{dl} \times \hat{r}}{r^2}
+$$
+所以安培力等于电流元2的 $I\ \vec{dl}$ 叉乘 电流元1产生的磁场B
+$$
+dF_{12}=I_2\ \vec{dl_2}\times\vec{dB_1}
+$$
+
+##### 无限长直导线的磁场
+
+$$
+B=\frac{\mu_0I}{2\pi r_0}
+$$
+
+其中，$r_0$ 为某点距导线的垂直距离。方向符合右手定则。
+
+##### 环形电流元中轴线处磁场
+
+$$
+dB=\frac{\mu_0R^2}{2(r_0^2+R^2)^{3/2}}dI \\
+圆心处：dB=\frac{\mu_0dI}{2R},\quad 非常远处：dB=\frac{\mu_0R^2dI}{2r_0^3}
+$$
+
+其中，R为环形电流元半径，$r_0$ 为某点距圆心距离。方向符合右手定则。
+
+##### 无限长载流圆筒磁场
+
+桶外有B=0
+
+桶内有$B=\mu_0 \iota$ ，为匀强磁场，其中 $\iota$ 为沿轴向单位长度内的电流。
+
+##### 无限长螺线管
+
+管内任意位置（管外为0）
+$$
+B=\mu_0nI
+$$
+其中，n为单位长度内线圈匝数，$n=\frac{N}{l}$ （N为线圈总匝数，l为筒长）。
+
+##### 螺绕环
+
+内部磁场：
+$$
+B=\frac{\mu_0NI}{2\pi R}
+$$
+R为整个环的半径。外部磁场处处为0。
+
+### 3. 安培环路定理
+
+磁感应强度沿任意闭合回路的线积分等于穿过环路平面所有电流代数和的$\mu_0$ 倍
+$$
+\oint\vec{B}\cdot\vec{dl}=\mu_0\sum_{(l内)} I
+$$
+
+
+### 4. 磁场高斯定理
+
+#### 磁高斯定理
+
+通过任意闭合曲面磁通量为0，或磁感应强度的散度为0（无源场/无散场）
+$$
+\oiint\vec{B}\cdot\vec{dS}=0 \\
+\nabla\cdot\vec{B}=0
+$$
+
+#### 磁失势
+
+通过任意曲面的磁通量仅由曲面边界线决定，所以定义磁失势A，磁失势A是一个矢量场。
+$$
+\oint\vec{A}\cdot\vec{dl}=\iint\vec{B}\cdot\vec{dS} \\
+\vec{B}=\nabla\times\vec{A}（旋度）
+$$
+
+### 5. 磁场对载流导线的作用
+
+任意形状线圈在磁场中所受力矩
+$$
+\vec{L}=IS\vec{n}\times\vec{B}
+$$
+
+#### 磁矩
+
+任意电流环有磁矩$\vec{m}$，是电流环本身的性质
+$$
+\vec{m}=IS\vec{n}
+$$
+
+所以任意电流环在外磁场中受力为 $\vec{L}=\vec{m}\times\vec{B}$ ，外磁场使磁矩偏向于外磁场方向。
+
+### 6. 带电粒子在磁场中的运动
+
+#### 洛伦兹力
+
+$$
+\vec{F}=q\vec{v}\times\vec{B}
+$$
+
+带电粒子在匀强磁场中运动
+
+1. 速度和磁场垂直
+   粒子做圆周运动
+2. 速度和磁场不垂直
+   粒子做螺旋运动（分成垂直于磁场和平行于磁场，垂直于磁场速度做圆周运动而平行于磁场速度做匀速直线运动）
+
+---
+
+## 电磁介质
+
+### 1. 电介质
+
+电介质就是绝缘介质，他们不导电但是会被电场极化。
+
+无极分子：分子的正负电荷的“重心”重合。无极分子的极化是正负电荷产生微小位移，全部朝向场强方向，叫做电子位移极化。
+
+有极分子：分子的正负电荷错开，形成固有电矩（电偶极矩）。有极分子的极化是电矩的偏转，叫做取向极化。
+
+电偶极矩（电矩矢量）：从负电荷指向正电荷，$\vec{p}=q\vec{l}$ 。电偶极矩在电场作用下会向电场方向偏转。
+
+#### 极化强度矢量P
+
+单位体积内的电矩矢量，度量被极化的强度。
+$$
+\vec{P}=\frac{\sum \vec{p_{分子}}}{dV}
+$$
+极化强度矢量方向不一定沿电场方向。
+
+均匀极化：电介质内各点极化强度矢量大小、方向均相同。
+
+极化强度和极化电荷密度：
+
+极化电荷全部分布在电介质表面（内部相互抵消）。
+$$
+表面极化电荷密度：\sigma_e=\vec{P}\cdot\vec{n} \\
+表面极化电荷量：dq=\sigma_edS=\vec{P}\cdot\vec{dS}
+$$
+其中，$\sigma_e$ 为表面极化电荷密度，$\vec{n}$ 为表面法向单位矢量。
+
+#### 退极化场
+
+$$
+\vec{E}=\vec{E_0}+\vec{E\ '} \\
+\vec{E_0}为外场，\vec{E\ '}为退极化场
+$$
+
+电介质产生的场强总是和外场方向相反。
+
+##### 平行板电容器中电介质的退极化场
+
+$$
+E'=\frac{P}{\varepsilon_0}
+$$
+
+其中P为电介质的极化强度。
+
+##### 均匀电介质球的退极化场
+
+$$
+E'=\frac{P}{3\varepsilon_0}
+$$
+
+其中P为电介质的极化强度。
+
+退极化场与电介质形状：
+
+电介质 垂直于场强方向长度/沿场强方向长度 比值越大，退极化场越强。（平行板电容器最强）
+
+#### 极化率
+
+极化强度P是由总场强E决定的，对于各向同性线性电介质，
+$$
+\vec{P}=\chi_e\varepsilon_0\vec{E}
+$$
+$\chi_e$ 叫做极化率，与电介质的材料有关。
+
+【注】$\vec{P}、\sigma_e、\vec{E'}$ 相互作用（$\vec{E'}$ 由 $\sigma_e$ 决定，$\sigma_e$ 由 $\vec{P}$  决定，$\vec{P}$ 和总场 $\vec{E}$ 有等式关系）最后达到一种平衡。
+
+介电常量
+$$
+\varepsilon=1+\chi_e
+$$
+对于各向同性电介质：
+$$
+\vec{D}=\varepsilon_0\vec{E}+\vec{P}=\varepsilon\varepsilon_0\vec{E}
+$$
+
+
+##### 平行板电容器内总场强
+
+$$
+E=\frac{E_0}{1+\chi_e} \\
+其中，\vec{E_0}为外场强、\chi_e为极化率
+$$
+
+
+
+##### 电介质球内总场强
+
+$$
+\vec{E}=\frac{\vec{E_0}}{1+\frac{\chi_e}{3}} \\
+其中，\vec{E_0}为外场强、\chi_e为极化率
+$$
+
+#### 电位移矢量
+
+$$
+电位移矢量：\vec{D}=\varepsilon_0\vec{E}+\vec{P} \\
+其中，\vec{E}为总场强、\vec{P}为极化强度
+$$
+
+电介质内高斯定理：
+$$
+\oiint\limits_{(S)}\vec{D}\cdot\vec{dS}=\sum\limits_{(S内)} q_0 \\
+其中，q_0为自由电荷(不包含极化电荷)
+$$
+
+### 2. 磁介质--分子电流观点
+
+#### 磁化强度矢量
+
+单位体积内磁矩的矢量和。表征磁介质被磁化的强度。
+$$
+\vec{M}=\frac{\sum{\vec{m}_{分子}}}{\triangle V}
+$$
+
+
+磁化电流分布与磁化强度的关系：
+
+在包含磁介质的空间任意做一个闭合曲线L，磁化强度对闭合曲线的线积分等于通过L所围面的全部分子电流的代数和。
+$$
+\int\limits_{(L)}\vec{M}\cdot\vec{dl}=\sum_{(L内)}I' \\
+$$
+在磁介质表面，磁化强度和介质表面单位长度(垂直于电流方向)上磁化电流（又叫表面磁化电流密度）的关系如下。
+$$
+\vec{i'}=\vec{M}\times\vec{n} \\ 
+$$
+其中，磁化电流 $I'=i'\ \triangle l$ 
+
+#### 磁介质内磁感应强度B
+
+$$
+\vec{B}=\vec{B_0}+\vec{B'} \\
+其中\ \vec{B_0}为外加磁场、\vec{B'}为附加磁场
+$$
+
+磁介质的附加磁场总是和外加磁场方向相同，表现为增强外加磁场。
+
+##### 无限长铁棒的附加磁场
+
+$$
+\vec{B'}=\mu_0\vec{M}
+$$
+
+
+
+#### 磁场强度矢量H
+
+$$
+\vec{H}=\frac{\vec{B}}{\mu_0}-\vec{M}
+$$
+
+此时有**安培环路定理**：
+
+磁场强度矢量H沿任意闭合回路积分等于穿过此回路包围平面的传导电流（不包含磁化电流）之和。
+$$
+\oint\limits_{(L)}\vec{H}\cdot\vec{dl}=\sum_{(L内)}I_0
+$$
+在无磁介质时：
+$$
+\vec{H}=\frac{\vec{B}}{\mu_0}
+$$
+
+
+
+### 5. 磁介质的磁化规律、铁磁体
+
+电子的磁矩包括轨道磁矩和自旋磁矩。
+$$
+\vec{m_{分子}}=\vec{m_{轨道}}+\vec{m_{自旋}}=IS\vec{n}-\frac{er^2}{2}\vec{\omega}
+$$
+
+#### 顺磁质和抗磁质
+
+顺磁质：分子有固有磁矩（轨道磁矩和自旋磁矩不抵消）。被磁化是因为固有磁矩的排列。
+
+抗磁质：分子无固有磁矩。加磁场以后自旋磁矩增大，表现为与磁场方向相反的磁矩（抗磁质中也有此种磁矩，不过比较微弱）。
+
+#### 铁磁质
+
+铁磁质的磁性主要来自于自旋磁矩（固有磁矩是自旋磁矩）。铁磁质中的自旋磁矩因为交换作用“自发地”排列起来，成为磁畴。而磁化过程表现为磁畴壁的运动，吞并附近磁畴。介质里的掺杂和内应力在去掉外磁场以后阻碍着磁畴恢复原状，所以会被磁化。
+
+##### 磁滞回线
+
+磁滞回线包围的面积代表在一轮磁化过程中单位体积内铁芯内损耗的能量，称为磁滞损耗。
+
+##### 铁磁质分类
+
+- 软磁材料
+  矫顽力很小，磁滞损耗较少，适合用来做电路中的原件，能量损耗较少。
+- 硬磁材料
+  矫顽力很大，适合用来做永磁体。
+
+### 6. 电磁介质界面上的边界条件、磁路定理
+
+#### 电磁介质的边界条件
+
+电介质
+
+- 电位移矢量D的法向分量连续
+- 电场强度E的切向分量连续
+
+**电介质的折射**
+
+电介质两侧电场线与法线方向夹角的正切等于两侧介质介电常量之比
+$$
+\frac{tan\theta_1}{tan\theta_2}=\frac{\varepsilon_1}{\varepsilon_2}
+$$
+磁介质
+
+- 磁感应强度B的法向分量连续
+- 磁场强度H的切向分量连续
+
+定义磁介质磁导率$\mu_1$
+$$
+B=\mu_0\mu_1H
+$$
+**磁介质的折射**
+
+磁介质两侧磁感应线与法线夹角的正切之比等于两侧磁导率之比
+$$
+\frac{tan\theta_1}{tan\theta_2}=\frac{\mu_1}{\mu_2}
+$$
+
+#### 磁路定理
+
+#### 磁屏蔽
+
+外磁场中放磁导率很大的铁磁性材料球壳，使得磁场因为折射大部分沿球壳方向分布。但这样的屏蔽不像电场屏蔽那样好。
+
+
+
+
+---
+
+## 电磁感应
+
+### 1. 电磁感应定律
+
+#### 法拉第定律
+
+导体回路中产生的感应电动势等于磁通量的变化率。方向为楞次定律（磁场右手定则反方向）。
+$$
+\varepsilon=-\frac{d\phi}{dt}
+$$
+N匝圈回路的电动势
+$$
+\varepsilon=-\frac{d\phi_1+d\phi_2+\dots+d\phi_N}{dt}=-\frac{d\psi}{dt}
+$$
+其中，$\psi=\phi_1+\dots+\phi_N$ 叫做磁通匝链数，若每个线圈磁通量相等，则 $\psi=N\phi$
+
+#### 楞次定律
+
+闭合回路中感应电流的方向（感应电动势的方向），总是使它所激发的磁场来阻碍引起感应电流的磁通量的变化。
+
+#### 涡电流
+
+导体在线圈内，线圈通入高频交流电，导体内部不断产生感应电流，称为涡流。
+
+### 2. 动生电动势和感生电动势
+
+#### 动生电动势
+
+为导体回路形状变化产生，形状变化时导体段会有速度，从而在磁场中收到洛伦兹力而产生电流。
+
+#### 感生电动势
+
+磁场变化会在某磁通量变化的闭合回路中产生电场，这个电场叫做涡旋电场$E_旋$。方向与磁失势方向相反，大小等于磁失势变化率。
+$$
+\vec{E_旋}=-\frac{\partial \vec{A}}{\partial t} \\
+其中，\oint\vec{A}\cdot\vec{dl}=\iint\vec{B}\cdot\vec{dS}
+$$
+涡旋电场电场线闭合。涡旋电场提供的是电势。
+
+所以空间总电场：
+$$
+\vec{E}=\vec{E_势}+\vec{E_旋}=-\nabla U-\frac{\partial A}{\partial t}
+$$
+
+所以电场环路定律：
+$$
+\oint\vec{E}\cdot\vec{dl}=0-\oint\frac{\partial \vec{A}}{\partial t}\cdot \vec{dl}=-\iint\vec{\frac{\partial B}{\partial t}}\cdot\vec{dS}
+$$
+
+
+### 3. 带电粒子动量
+
+$$
+mv+qA=p（常量)
+$$
+
+p称为正则动量或共轭动量
+
+
+
+### 5. 互感和自感
+
+#### 互感系数
+
+互感系数与两线圈的结构和相对位置有关。
+$$
+\varepsilon_1=-M\frac{dI_1}{dt} \\ 
+\psi_{12}=MI_1
+$$
+其中，$\psi_{12}$为线圈1的磁场对线圈2的磁通
+
+互感系数描述变化电流产生互感电动势的能力。也描述恒定电流产生互感磁通量的能力。
+
+#### 自感系数
+
+自感系数与线圈的结构有关。
+$$
+\varepsilon=-L\frac{dI}{dt} \\
+\psi=LI
+$$
+其中，$\psi$ 为线圈自身的磁通匝链
+
+自感系数描述变化电流产生自感电动势的能力。也描述恒定电流产生自感磁通量的能力。
+
+#### 两线圈串联
+
+顺接串联
+$$
+L=L_1+L_2+2M
+$$
+反接串联
+$$
+L=L_1+L_2-2M
+$$
+
+#### 感应磁能
+
+自感磁能
+$$
+W=\frac{1}{2}LI^2
+$$
+互感磁能
+$$
+W=MI_1I_2
+$$
+
+---
+
+## 麦克斯韦电磁理论
+
+### 1. 麦克斯韦电磁理论
+
+#### 位移电流
+
+在非恒定条件下，传统的安培环路定理会失效。
+$$
+\oint\limits_{(L)}\vec{H}\cdot\vec{dl}=I_0
+$$
+如，在电容器附近取闭合回路，取边界为为该闭合回路的两个曲面，$S_1$ 穿过电容器两极板中间、$S_2$ 不穿过电容器。则有穿过$S_1$ 的电流为零，穿过$S_2$ 的电容不为零。
+
+引入位移电流（其实不是电流，是电位移的变化率，即电流在这里变成了电场）
+$$
+\frac{d\Phi_D}{dt}=\frac{d}{dt}\iint\frac{\partial D}{\partial t}\cdot \vec{dS}
+$$
+所以**安培环路定律**：
+$$
+\oint\limits_{(L)}\vec{H}\cdot\vec{dl}=I_0+\frac{d}{dt}\iint\frac{\partial D}{\partial t}\cdot \vec{dS}
+$$
+位移电流的组成：
+$$
+\frac{d\Phi_D}{dt}=\frac{d}{dt}\iint\frac{\partial D}{\partial t}\cdot \vec{dS}=\varepsilon_0\iint\frac{\partial E}{\partial t}\cdot \vec{dS}+\iint\frac{\partial P}{\partial t}\cdot \vec{dS}
+$$
+其中基本项为电场对时间变化率的通量（类比电流，电场对时间导数为电压、电容器中电压和电荷成正比、电荷对时间倒数为电流），第二项为电介质中的极化电流。
+
+#### 麦克斯韦方程组
+
+电场中的高斯定律：
+
+电位移（引入电介质后）对闭合曲面通量等于自由电荷电量。
+$$
+\oiint\vec{D}\cdot\vec{dS}=q_0
+$$
+电场中的环路定律：
+
+电场的环量等于负的磁场变化率通量（引入涡旋电场后）。
+$$
+\oint\vec{E}\cdot\vec{dl}=-\iint\frac{\vec{\partial B}}{\partial t}\cdot \vec{dS}
+$$
+磁场中的高斯定律：
+
+磁感应强度对闭合曲面通量为0。
+$$
+\oiint\vec{B}\cdot\vec{dS}=0
+$$
+磁场中的环路定律（安培环路定律）：
+
+磁场强度（引入磁介质后）的环量等于穿过闭合面的传导电流与位移电流之和。
+$$
+\oint\vec{H}\cdot\vec{dl}=I_0+\iint\frac{\vec{\partial D}}{\partial t}\cdot\vec{dS}
+$$
+
+##### 麦克斯韦方程组的积分形式：
+
+$$
+\oiint\vec{D}\cdot\vec{dS}=q_0 \\
+\oint\vec{E}\cdot\vec{dl}=-\iint\frac{\vec{\partial B}}{\partial t}\cdot \vec{dS} \\
+\oiint\vec{B}\cdot\vec{dS}=0 \\
+\oint\vec{H}\cdot\vec{dl}=I_0+\iint\frac{\vec{\partial D}}{\partial t}\cdot\vec{dS}
+$$
+
+##### 麦克斯韦方程组的微分形式：
+
+电位移的散度等于自由电荷的体密度$\rho_{e0}$ 
+$$
+\nabla\cdot\vec{D}=\rho_{e0}
+$$
+电场强的的旋度等于负的磁场变化率（涡旋电场）
+$$
+\nabla\times\vec{E}=-\frac{\vec{\partial B}}{\partial t}
+$$
+磁感应强度的散度为0
+$$
+\nabla\cdot\vec{B}=0
+$$
+磁场强度的旋度等于 传导电流密度$j_0$ 与电位移电流密度$\frac{\vec{\partial D}}{\partial t}$ （均垂直于磁场）之和
+$$
+\nabla\cdot\vec{H}=\vec{j_0}+\frac{\vec{\partial D}}{\partial t}
+$$
+汇总：
+$$
+\nabla\cdot\vec{D}=\rho_{e0} \\
+\nabla\times\vec{E}=-\frac{\vec{\partial B}}{\partial t} \\
+\nabla\cdot\vec{B}=0 \\
+\nabla\cdot\vec{H}=j_0+\frac{\vec{\partial D}}{\partial t}
+$$
+
+##### 描述介质性质的方程（各向同性介质）
+
+$$
+\vec{D}=\varepsilon\varepsilon_0\vec{E} \\
+\vec{B}=\mu\mu_0\vec{H} \\
+\vec{j_0}=\sigma \vec{E}
+$$
+
+其中，$\varepsilon、\mu、\sigma$ 分别为介电常量、磁导率、电导率
+
+##### 边界条件
+
+- 磁介质边界条件：
+
+磁感应强度B法向分量连续。
+
+磁场强度H的切向分量连续。
+
+- 电介质边界条件：
+
+电场强度E切向分量连续。
+
+电位移D法向分量连续。
+
+- 导体边界条件：
+
+传导电流j法向分量连续
+
